Fix pause button overlapping voting animation

--- a/MusicBattlWebAPI/Content/_voting-widget.scss
+++ b/MusicBattlWebAPI/Content/_voting-widget.scss
@@ -168,7 +168,7 @@
         background-color: #333;
         top: 45px;
         left: 45px;
-        z-index: 1;
+        z-index: 12;
     }
 
     .inner-circle {
@@ -179,7 +179,7 @@
         top: 60px;
         left: 60px;
         box-shadow: 0 0 6px 0 #000;
-        z-index: 3;
+        z-index: 13;
     }
 }
 
